--- a/ida-jwt-infrastructure/build.gradle
+++ b/ida-jwt-infrastructure/build.gradle
@@ -10,10 +10,9 @@ repositories {
 }
 
 dependencies {
-    implementation project(':ida-common')
-    implementation project(':ida-domain-common')
+    implementation jjwt
 
-    implementation json
+    implementation 'commons-codec:commons-codec:1.15'
 
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
