--- a/settings.gradle
+++ b/settings.gradle
@@ -8,4 +8,5 @@ include 'ida-infrastructure-common'
 include 'ida-applicant-domain'
 include 'ida-admission-domain'
 include 'ida-admission-infrastructure'
+include 'ida-jwt-infrastructure'
 
