:see_no_evil: :: update .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -169,5 +169,6 @@ gradle-app.setting
 
 ### useless folder
 images
+TODO.MD
 
 # End of https://www.toptal.com/developers/gitignore/api/intellij,java,gradle
