--- a/ida-admission-domain/build.gradle
+++ b/ida-admission-domain/build.gradle
@@ -10,7 +10,11 @@ repositories {
 }
 
 dependencies {
+    implementation project(':ida-common')
     implementation project(":ida-domain-common")
+
+    implementation json
+
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
 }
