:art: :: (#1) fix and improve mapper

--- a/ida-http-application/build.gradle
+++ b/ida-http-application/build.gradle
@@ -28,6 +28,7 @@ dependencies {
 
     runtimeOnly mysql
     implementation springboot_web
+    implementation springboot_jpa
     implementation jjwt
     annotationProcessor springboot_anno
 
