:sparkles: :: add school layer

--- a/settings.gradle
+++ b/settings.gradle
@@ -11,3 +11,5 @@ include 'ida-admission-infrastructure'
 include 'ida-jwt-infrastructure'
 include 'ida-secondary-domain'
 include 'ida-secondary-infrastructure'
+include 'ida-school-domain'
+include 'ida-school-infrastructure'
