:card_file_box: :: perform add school entity

--- a/ida-school-domain/build.gradle
+++ b/ida-school-domain/build.gradle
@@ -10,6 +10,9 @@ repositories {
 }
 
 dependencies {
+    implementation project(':ida-common')
+    implementation project(':ida-domain-common')
+    implementation project(':ida-applicant-domain')
     implementation json
 
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
