--- a/ida-member-infrastructure/build.gradle
+++ b/ida-member-infrastructure/build.gradle
@@ -26,6 +26,7 @@ dependencies {
     testImplementation springboot_test
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
+    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 }
 
 test {
