--- a/ida-secondary-domain/build.gradle
+++ b/ida-secondary-domain/build.gradle
@@ -1,5 +1,7 @@
 plugins {
     id 'java'
+    id 'org.springframework.boot' version "$springboot_version"
+    id 'io.spring.dependency-management' version '1.1.0'
 }
 
 group 'kr.hs.dgsw.cns'
@@ -11,6 +13,7 @@ repositories {
 
 dependencies {
     implementation project(":ida-admission-domain")
+    implementation project(":ida-common")
 
     implementation json
 
