:sparkles: :: add third-party layer

--- a/settings.gradle
+++ b/settings.gradle
@@ -13,3 +13,4 @@ include 'ida-secondary-domain'
 include 'ida-secondary-infrastructure'
 include 'ida-school-domain'
 include 'ida-school-infrastructure'
+include 'ida-thirdparty-infrastructure'
