--- a/ida-thirdparty-infrastructure/build.gradle
+++ b/ida-thirdparty-infrastructure/build.gradle
@@ -12,7 +12,13 @@ repositories {
 }
 
 dependencies {
+    implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
+}
 
+dependencyManagement {
+    imports {
+        mavenBom "org.springframework.cloud:spring-cloud-dependencies:2021.0.3"
+    }
 }
 
 test {
