--- a/ida-http-application/build.gradle
+++ b/ida-http-application/build.gradle
@@ -11,6 +11,8 @@ repositories {
     mavenCentral()
 }
 
+bootJar.enabled = true
+
 dependencies {
     implementation 'org.reflections:reflections:0.10.2'
 
