--- a/ida-thirdparty-infrastructure/build.gradle
+++ b/ida-thirdparty-infrastructure/build.gradle
@@ -11,6 +11,8 @@ repositories {
     mavenCentral()
 }
 
+bootJar.enabled = false
+
 dependencies {
     implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
 }
