--- a/ida-member-infrastructure/build.gradle
+++ b/ida-member-infrastructure/build.gradle
@@ -10,6 +10,8 @@ version '1.0-SNAPSHOT'
 repositories {
     mavenCentral()
 }
+bootJar.enabled = false
+
 
 dependencies {
     implementation project(':ida-common')
