--- a/ida-school-infrastructure/build.gradle
+++ b/ida-school-infrastructure/build.gradle
@@ -11,6 +11,8 @@ repositories {
     mavenCentral()
 }
 
+bootJar.enabled = false
+
 dependencies {
     implementation project(':ida-common')
     implementation project(':ida-domain-common')
