:wrench: :: (#9) add open-feign config

--- a/ida-member-infrastructure/build.gradle
+++ b/ida-member-infrastructure/build.gradle
@@ -17,6 +17,7 @@ dependencies {
     implementation project(':ida-infrastructure-common')
     implementation project(':ida-member-domain')
     implementation project(':ida-applicant-domain')
+    implementation project(':ida-thirdparty-infrastructure')
 
     runtimeOnly mysql
     implementation springboot_jpa
