:necktie: :: (#9) add send auth-code logic

--- a/ida-thirdparty-infrastructure/build.gradle
+++ b/ida-thirdparty-infrastructure/build.gradle
@@ -12,7 +12,10 @@ repositories {
 }
 
 dependencies {
+    implementation project(":ida-common")
+
     implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
+    annotationProcessor springboot_anno
 }
 
 dependencyManagement {
