:sparkles: :: (#6) implementation of aptitude service logic

--- a/ida-secondary-infrastructure/build.gradle
+++ b/ida-secondary-infrastructure/build.gradle
@@ -18,6 +18,8 @@ dependencies {
 	implementation project(':ida-admission-domain')
 	implementation project(':ida-admission-infrastructure')
 	implementation project(':ida-secondary-domain')
+	implementation project(':ida-member-domain')
+	implementation project(':ida-applicant-domain')
 
 	runtimeOnly mysql
 	implementation springboot_jpa
