:heavy_plus_sign: :: add redis dependency

--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,7 @@ buildscript {
         springboot_mockito = ['org.mockito:mockito-junit-jupiter:3.11.2', 'org.mockito:mockito-core:3.11.2']
 
         mysql = 'com.mysql:mysql-connector-j:8.0.32'
+        redis = 'org.springframework.boot:spring-boot-starter-data-redis'
         jjwt = ['io.jsonwebtoken:jjwt-api:0.11.5', 'io.jsonwebtoken:jjwt-impl:0.11.5', 'io.jsonwebtoken:jjwt-jackson:0.11.5']
     }
 }
