:construction: :: work in progress send auth message feature but can't proceed any further

--- a/ida-member-infrastructure/build.gradle
+++ b/ida-member-infrastructure/build.gradle
@@ -20,6 +20,7 @@ dependencies {
     implementation project(':ida-thirdparty-infrastructure')
 
     runtimeOnly mysql
+    implementation redis
     implementation springboot_jpa
     implementation springboot_querydsl_impl
     annotationProcessor springboot_querydsl_anno
